force-app/main/default/objects/Retention__c/Retention__c.object-meta.xml
<CustomObject>
    <label>Retention</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Retention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retentions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>