force-app/main/default/objects/Retention__c/fields/CANewRetentionRate__c.field-meta.xml
<CustomField>
    <fullName>CANewRetentionRate__c</fullName>
    <label>CANewRetentionRate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>