force-app/main/default/objects/Retention__c/fields/ClientNbr__c.field-meta.xml
<CustomField>
    <fullName>ClientNbr__c</fullName>
    <label>ClientNbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>