force-app/main/default/objects/Retention__c/fields/ClientShare__c.field-meta.xml
<CustomField>
    <fullName>ClientShare__c</fullName>
    <label>ClientShare</label>
    <precision>17</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>