force-app/main/default/objects/Retention__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>refresh date from oneData through ETL</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>