force-app/main/default/objects/Retention__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Time</fullName>
            </value>
            <value>
                <fullName>2 Times</fullName>
            </value>
            <value>
                <fullName>3 Times</fullName>
            </value>
            <value>
                <fullName>4 Times</fullName>
            </value>
            <value>
                <fullName>5 Times+</fullName>
            </value>
            <value>
                <fullName>&lt;5W</fullName>
            </value>
            <value>
                <fullName>5~8W</fullName>
            </value>
            <value>
                <fullName>10K</fullName>
            </value>
            <value>
                <fullName>50K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>