force-app/main/default/objects/Retention__c/fields/LMRetentionRate__c.field-meta.xml
<CustomField>
    <fullName>LMRetentionRate__c</fullName>
    <label>LMRetentionRate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>