force-app/main/default/objects/Retention__c/fields/LVM_Id__c.field-meta.xml
<CustomField>
    <fullName>LVM_Id__c</fullName>
    <label>LVM Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>