force-app/main/default/objects/Retention__c/fields/LYRetentionRate__c.field-meta.xml
<CustomField>
    <fullName>LYRetentionRate__c</fullName>
    <label>LYRetentionRate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>