force-app/main/default/objects/Retention__c/fields/NationalRetention__c.field-meta.xml
<CustomField>
    <fullName>NationalRetention__c</fullName>
    <label>NationalRetention</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>