force-app/main/default/objects/Retention__c/fields/Pyramid_type__c.field-meta.xml
<CustomField>
    <fullName>Pyramid_type__c</fullName>
    <label>Pyramid type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>byVisit</fullName>
            </value>
            <value>
                <fullName>byR12MSpending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>