force-app/main/default/objects/Retention__c/fields/R12MTotClient__c.field-meta.xml
<CustomField>
    <fullName>R12MTotClient__c</fullName>
    <label>R12MTotClient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>