force-app/main/default/objects/Retention__c/fields/Refresh_type__c.field-meta.xml
<CustomField>
    <fullName>Refresh_type__c</fullName>
    <label>Refresh type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>