force-app/main/default/objects/Retention__c/fields/RegionalRetention__c.field-meta.xml
<CustomField>
    <fullName>RegionalRetention__c</fullName>
    <label>RegionalRetention</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>