force-app/main/default/objects/Retention__c/fields/RetainedClient__c.field-meta.xml
<CustomField>
    <fullName>RetainedClient__c</fullName>
    <label>RetainedClient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>