force-app/main/default/objects/Retention__c/fields/segregation_type__c.field-meta.xml
<CustomField>
    <fullName>segregation_type__c</fullName>
    <label>segregation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>store</fullName>
            </value>
            <value>
                <fullName>ca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>