force-app/main/default/objects/Retention__c/fields/Store_code__c.field-meta.xml
<CustomField>
    <fullName>Store_code__c</fullName>
    <label>Store code</label>
    <length>19</length>
    <type>Text</type>
</CustomField>