force-app/main/default/objects/Retention__c/fields/StoreNewRetentionRate__c.field-meta.xml
<CustomField>
    <fullName>StoreNewRetentionRate__c</fullName>
    <label>StoreNewRetentionRate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>